added docker compose

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,12 @@ http {
 			root /home/ubuntu/Progetto-AWS;
 			index index.html;
 		}
+		location ~ \.php$ {
+			include fastcgi_params;
+			fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;  # Adjust to your PHP version and socket location
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param PATH_INFO $fastcgi_path_info;
+		}
 	}
 }
 
