changed to default path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 services:
-  mysql:
+
+  php-apache-environment:
+    container_name: php-apache
+    build:
+      dockerfile: Dockerfile
+    depends_on:
+      - mysql-2
+    volumes:
+            - /home/ubuntu/Progetto-AWS:/var/www/html  # Changed this line
+    ports:
+      - "8081:80"
+
+  mysql-2:
     container_name: mysql-2
     image: mysql
     ports:
@@ -20,7 +32,7 @@ services:
       NJS_RELEASE: "3~bookworm"
       PKG_RELEASE: "1~bookworm"
     volumes:
-      - /home/ubuntu/Progetto-AWS:/home/ubuntu/Progetto-AWS
+            - /home/ubuntu/Progetto-AWS:/var/www/html  # Changed this line
     tty: true
     stdin_open: true
     labels:
@@ -40,7 +52,7 @@ services:
       NJS_RELEASE: "3~bookworm"
       PKG_RELEASE: "1~bookworm"
     volumes:
-      - /home/ubuntu/Progetto-AWS:/home/ubuntu/Progetto-AWS
+            - /home/ubuntu/Progetto-AWS:/var/www/html  # Changed this line
     tty: true
     stdin_open: true
     labels:
@@ -48,6 +60,7 @@ services:
     entrypoint:
       - /docker-entrypoint.sh
     command: ["nginx", "-g", "daemon off;"]
+
 
   phpmyadmin:
     container_name: phpmyadmin-2
@@ -59,8 +72,7 @@ services:
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
     depends_on:
-      - mysql
+      - mysql-2
 
 volumes:
-  mysql_data:  # Volume for MySQL data persistence
-
+  mysql_data:  # Volume for MySQL data persistenc
