--- a/nginx.conf
+++ b/nginx.conf
@@ -17,8 +17,13 @@ http {
 		ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
 
 		location / {
-			root /home/ubuntu/Progetto-AWS;
+			root /var/www/html;
 			index index.html;
+		}
+		location ~ \.php$ {
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_pass php:9000;
 		}
 	}
 }
