--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,12 @@
 services:
+
+  php:
+    container_name: php-2
+    image: php:latest
+    volumes:
+      - /home/ubuntu/Progetto-AWS:/var/www/html
+    ports:
+      - "9000:9000"
   mysql:
     container_name: mysql-2
     image: mysql
@@ -11,7 +19,8 @@ services:
 
   nginx-http:
     container_name: nginx-http-2
-    image: nginx-selfsigned
+    image: custom-nginx
+      #image: nginx-selfsigned
     ports:
       - "80:80"  # Map port 80 on the host to port 80 in the container
     environment:
@@ -31,7 +40,8 @@ services:
 
   nginx-https:
     container_name: nginx-https-2
-    image: nginx-selfsigned
+    image: custom-nginx
+      #image: nginx-selfsigned
     ports:
       - "443:443"  # Map port 443 on the host to port 443 in the container
     environment:
