--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,20 @@ http {
 			root /home/ubuntu/Progetto-AWS;
 			index index.html;
 		}
+
+		location /home/ubuntu/progetto-AWS/src/AWS_website/includes/ {
+					include fastcgi_params;
+					fastcgi_pass php:9000;
+					fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+					fastcgi_param PATH_INFO $fastcgi_path_info;
+		}
+		#		location ~ \.php$ {
+		#			include fastcgi_params;
+		#			fastcgi_pass php:9000;
+		#			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		#			fastcgi_param PATH_INFO $fastcgi_path_info;
+		#		}
+
 	}
 }
 
