--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,12 @@
 server {  
-	listen 80 default_server;  
+	listen 443 ssl default_server;  
 	root /var/www/html;  
 	index index.html index.php;  
 
 	charset utf-8;  
 
+	ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+	ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
 	location / {  
 		try_files $uri $uri/ /index.php?$query_string;  
 	}  
@@ -17,7 +19,7 @@ server {
 
 	sendfile off;  
 
-	client_max_body_size 100m;  
+	#client_max_body_size 100m;  
 
 	location ~ .php$ {  
 		fastcgi_split_path_info ^(.+.php)(/.+)$;  
