--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,8 @@
+server {
+	listen 80;
+	return 301 https://$host$request_uri;
+}
+
 server {  
 	listen 443 ssl default_server;  
 	root /var/www/html;  
